<resources>
    <string name="app_name">MyTrip</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Phone Number</string>
    <string name="prompt_password">Password </string>
    <string name="action_generate_otp">Generate OTP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="regenarate">Re-Generate</string>
    <string name="one_time_password">One Time Password</string>
    <string name="approve">Approve</string>
</resources>
